--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
-  text-align: center;
+  
+}
+.all__users {
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
+   flex: 1 1 160px;
 }
 
 .App-logo {
