--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,17 @@
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
-   flex: 1 1 160px;
+   flex: 1 1 100px;
+
+   
 }
+
+@media (max-width: 480px) {
+  .all__users {
+    flex-direction: column;
+  }
+}
+
 
 .App-logo {
   height: 40vmin;
